--- a/Prediction-TabPFN_lumbar.ipynb
+++ b/Prediction-TabPFN_lumbar.ipynb
@@ -322,15 +322,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Leave One Out ROC AUC (micro):: 0.82\n",
-      "95% Confidence Interval: (0.73, 0.96)\n"
+      "Leave One Out ROC AUC (micro):: 0.86\n",
+      "95% Confidence Interval: (0.74, 0.96)\n"
      ]
     }
    ],
    "source": [
     "roc_auc = roc_auc_score(y_true_bin, y_proba, average='micro')\n",
     "ci_lower, ci_upper = bootstrap(y_true_bin, y_proba, roc_auc_score, average='micro')\n",
-    "print(f\"Leave One Out ROC AUC (micro):: {accuracy:.2f}\")\n",
+    "print(f\"Leave One Out ROC AUC (micro):: {roc_auc:.2f}\")\n",
     "print(f\"95% Confidence Interval: ({ci_lower:.2f}, {ci_upper:.2f})\")"
    ]
   },
